--- a/digraph/diagram/resources.qrc
+++ b/digraph/diagram/resources.qrc
@@ -9,6 +9,9 @@
     <file>images/node.png</file>
     <file>images/paste.png</file>
     <file>images/sendtoback.png</file>
+    <file>images/new.png</file>
+    <file>images/open.png</file>
+    <file>images/save.png</file>
     <file>images/turnroundlink.png</file>
 </qresource>
 </RCC>
